--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/vue-fontawesome": "^0.1.1",
+    "firebase": "^5.4.2",
     "vue": "^2.5.16",
     "vuex": "^3.0.1"
   },
